# cosmo-archive-retrieve

./: Jenkinsfile  LICENSE  README.rst  constants.py  environment.yml  pyproject.toml  sonar-project.properties
cosmo_archive_retrieve/: constants.py  convert_grib_to_p.py  create_zarr_archive.py  pre_install.py
doc/: conf.py  index.rst  installation.rst  usage.rst
scripts/: slurm-10162266.out  slurm-10162269.out  submit.sh
test/: test_dummy.py  test_dummy_library.py  test_process_files.py
